<resources>
    <string name="app_name">Updated</string>
    <string name="track_page">Track</string>
    <string name="add_page">Track a new page</string>
    <string name="enter_url_here">Enter URL Here</string>
    <string name="open_in_browser_button_text">Open In Browser</string>
    <string name="details_last_updated">Last Update: %1$s</string>
    <string name="details_url_tv_text">URL: %1$s</string>
    <string name="details_copy_url_button_text">Copy URL</string>
    <string name="details_notes_title_text">Notes</string>
    <string name="page_updated">Updated</string>
    <string name="chooser_title">Open this page with:</string>
    <string name="enter_title_here">Enter Title Here</string>
    <string name="preview_page">Preview</string>
    <string name="not_updated">Not Updated</string>
    <string name="notification_title">Updated Pages</string>
    <string name="save_page_settings_text">Save Page Settings</string>
    <string name="reset_defaults_text">Reset Defaults</string>
    <string name="save_settings_text">Save Settings</string>
    <string name="enter_url_toast">Please enter a URL!</string>
    <string name="added_url_toast">" Added"</string>
    <string name="page_active_tv">Tracking</string>
    <string name="settings_menu_text">Settings</string>
    <string name="about_menu_text">About</string>
    <string name="logout">Log Out</string>
    <string name="contact_menu_text">Contact</string>
    <string name="invalid_url_string">Not a valid URL!</string>
    <string name="added_page_string">" Added"</string>
    <string name="settings_title_text">Settings</string>
    <string name="update_frequency_title">Check for updates every </string>
    <string name="notifications_settings_title">Notifications %1$s</string>
    <string name="details_update_frequency_text">Update Frequency %1$s</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="image_logo">Logo</string>
    <string name="delete_page_button">Delete Page</string>
    <string name="contact_setting_title">Contact</string>
    <string name="send_message_button_text">Send</string>
    <string name="about_title_text">About</string>
    <string name="version_number">Version 1.0</string>
    <string name="email_et_hint">Send Us A Message</string>
    <string name="settings_update_units">hours</string>
    <string name="twitter_settings_icon_description">Twitter Settings Icon</string>
    <string name="github_icon_description">GitHub Icon</string>
    <string name="email_icon_description">Email Icon</string>
    <string name="on_text">On</string>
    <string name="off_text">Off</string>
    <string name="refresh_menu_text">Refresh</string>
    <string name="page_already_added_text">Page already added!</string>
    <string name="untitled_page_text">Untitled</string>
    <string name="settings_saved_text">Settings Saved</string>
    <string name="reset_default_alert_title">Are you sure?</string>
    <string name="reset_defaults_alert_message">You\'re about to wipe out all data and settings</string>
    <string name="reset_defaults_alert_positive">Yes</string>
    <string name="reset_defaults_alert_negative">Cancel</string>
    <string name="defaults_reset_text">Defaults Reset</string>
    <string name="details_saved_text">Details Saved!</string>
    <string name="refreshed_toast_text">Refreshed</string>
    <string name="selected_toolbar_title">Selected</string>
    <string name="url_input_et_default_text">http://www.</string>
    <string name="github_url">http://www.github.com/jgarcia162/updated</string>
    <string name="email_intent">mailto:jogarciadev@gmail.com</string>
    <string name="remove_toolbar_button_text">Remove</string>
    <string name="untrack_button_text">Untrack</string>
    <string name="delete_button_text">Delete</string>
    <string name="select_all_button_text">Select All</string>
    <string name="deselect_button_text">Deselect All</string>
    <string name="add_page_string">Add Page</string>
    <string name="add_pages_text">Add some pages to get started</string>
    <string name="add_notes_text">Add notes here</string>
    <string name="must_enter_number">You must enter a number!</string>
    <string name="login_with_email">Log in with email</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="skip_log_in">Skip Log in</string>
    <string name="skip_login_dialog_message">If you choose not to log in your data will be lost if you uninstall the app or change phones</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="invalid_password_dialog_message">Password must be at least 6 characters</string>
    <string name="log_in">Log in</string>
    <string name="back">Back</string>
    <string name="login_failed_message">Login failed, are you using the right email or password?</string>
    <string name="new_user">New User</string>
    <string name="logout_dialog_title">You\'re about to logout</string>
    <string name="logout_dialog_message">You\'ll have to log in again to save data across other devices</string>
    <string name="cancel">Cancel</string>
    <string name="network_connection_error">Network Connection Error</string>
    <string name="dismiss">Dismiss</string>
    <string name="skip">Skip</string>
    <string name="user_already_logged_in">is already logged in</string>
    <string name="logged_out">Logged Out</string>
    <string name="new_user_failed_message">This username may already be taken or email is not valid</string>
    <string name="new_user_failed_title">Failed to create user</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="logging_in">Logging in...</string>
    <string-array name="frequency_spinner_array">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
    </string-array>
</resources>
