<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingEnd="30dp"
    android:paddingStart="30dp">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textSize="48sp" />

    <RelativeLayout
        android:id="@+id/login_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/google_login_button"
            style="@style/UpdatedButtonsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in_with_google" />

        <Button
            android:id="@+id/email_login_button"
            style="@style/UpdatedButtonsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/google_login_button"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/login_with_email" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/enter_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="text"
            android:textColor="@color/lightFontColor"
            android:visibility="gone" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/enter_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_email_edittext"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_password"
            android:inputType="text"
            android:textColor="@color/lightFontColor"
            android:visibility="gone" />

        <Button
            android:id="@+id/login_button"
            style="@style/UpdatedButtonsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_password_edittext"
            android:layout_marginTop="10dp"
            android:text="@string/log_in"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/textview_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/email_login_button"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/back_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/back"
                android:textColor="@color/lightFontColor"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/skip_login_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showSkipLoginDialog"
                android:text="@string/skip_log_in"
                android:textColor="@color/lightFontColor" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>