<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/details_page_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="30sp"
        android:inputType="text"
        tools:text="Page Title"/>

    <TextView
        android:id="@+id/details_update_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/details_page_title_tv"
        android:text="@string/details_last_updated"
        android:textSize="20sp"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/details_url_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_update_tv"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/details_url_tv_text"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/details_open_browser_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_url_tv"
        android:layout_marginTop="10dp"
        android:text="@string/open_in_browser_button_text"/>
    <TextView
        android:id="@+id/details_notes_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/details_open_browser_button"
        android:layout_marginTop="10dp"
        android:text="@string/details_notes_title_text"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/details_notes_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/details_notes_title_tv"
        android:gravity="start"
        tools:text="TESTING THIS"/>

</RelativeLayout>