<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_title"
        style="@style/SettingFragmentTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/settings_title_text"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/update_frequency_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_frequency_title"
            style="@style/SettingFragmentTitles"/>

        <EditText
            android:id="@+id/update_frequency_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/update_frequency_title"
            android:layout_toRightOf="@id/update_frequency_title"
            android:layout_alignBottom="@id/update_frequency_title"
            android:layout_marginLeft="@dimen/frequency_et_left_margin"
            android:layout_marginStart="@dimen/frequency_et_left_margin"
            android:inputType="number"
            android:hint="24"
            android:textSize="20sp"/>
        <Spinner
            android:id="@+id/frequency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/update_frequency_et"
            android:layout_toRightOf="@id/update_frequency_et"
            android:layout_toEndOf="@id/update_frequency_et"/>
        <TextView
            android:id="@+id/notifications_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/update_frequency_title"
            android:layout_marginTop="20dp"
            android:text="@string/notifications_settings_title"
            style="@style/SettingFragmentTitles"/>
        <Switch
            android:id="@+id/notifications_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/frequency_spinner"
            android:layout_toRightOf="@id/notifications_settings_title"
            android:layout_toEndOf="@id/notifications_settings_title"
            android:layout_alignBottom="@id/notifications_settings_title"
            android:layout_marginTop="20dp"
            android:layout_alignEnd="@id/frequency_spinner"
            android:layout_alignRight="@id/frequency_spinner"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/contact_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <TextView
            android:id="@+id/contact_setting_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/contact_setting_title"
            android:textSize="25sp"
            style="@style/SettingFragmentTitles"/>
        <LinearLayout
            android:id="@+id/contact_icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_setting_tv"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/twitter_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/updated_logo"/>
            <ImageView
                android:id="@+id/instagram_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/updated_logo"/>
            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/updated_logo"/>
        </LinearLayout>
        <EditText
            android:id="@+id/message_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:layout_below="@id/contact_icons"/>
        <Button
            android:id="@+id/send_message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/message_et"
            android:text="@string/send_message_button_text"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/about_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_title_text"
        android:textSize="25sp"
        style="@style/SettingFragmentTitles"/>
    <LinearLayout
        android:id="@+id/about_details_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_number"/>

    </LinearLayout>


</LinearLayout>